testdata/golden/sema/valid/array_literal_fixed.sg
fn test() {
    let a = [1, 2, 3];
    let fixed: int[3] = a;
}
