testdata/golden/sema/invalid/ownership/array_get_mut_conflict.sg
// Cannot mutate array while an element is mutably borrowed.

fn main() {
    let mut xs: int[] = [1, 2, 3];
    let r = xs.get_mut(0);
    xs.push(4);
    *r = 9;
}
